apps/infrastructure/based-meter-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: based-meter-api
  labels:
    app.kubernetes.io/name: based-meter-api
    app.kubernetes.io/instance: based-meter-api-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: based-meter-api
  ports:
    - name: http
      port: 8080
      targetPort: http
