apps/infrastructure/based-meter-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: based-meter-api
  namespace: infrastructure
  annotations:
    external-dns: external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-pub
  labels:
    app.kubernetes.io/name: based-meter-api
    app.kubernetes.io/instance: based-meter-api-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  ingressClassName: traefik
  rules:
    - host: based.romanpeters.nl
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: based-meter-api
                port:
                  name: http
