apps/infrastructure/garage-web-code-honden-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-web-code-honden-auth
  namespace: infrastructure
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-pub
    traefik.ingress.kubernetes.io/router.middlewares: infrastructure-authentik-forward-auth@kubernetescrd,infrastructure-code-html-extensionless@kubernetescrd
  labels:
    app.kubernetes.io/name: garage-web-code-honden-auth
    app.kubernetes.io/instance: garage-web-code-honden-auth-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  ingressClassName: traefik
  rules:
    - host: code.romanpeters.nl
      http:
        paths:
          - path: /honden
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  name: web
