apps/infrastructure/networkpolicy-garage-s3-from-general.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-garage-s3-from-general-heimdall-sync
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: allow-garage-s3-from-general-heimdall-sync
    app.kubernetes.io/instance: allow-garage-s3-from-general-heimdall-sync-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: garage
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: general
          podSelector:
            matchLabels:
              app.kubernetes.io/name: heimdall-hello-sync
      ports:
        - protocol: TCP
          port: 3900
